[gd_scene load_steps=8 format=3 uid="uid://dscr837g0sw8b"]

[ext_resource type="StyleBox" uid="uid://cjb12vsy05mlx" path="res://Resources/hover_button.tres" id="1_omhcb"]
[ext_resource type="StyleBox" uid="uid://dex6iprylb8jv" path="res://Resources/normal_button.tres" id="2_yy8nm"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="3_tgang"]
[ext_resource type="Texture2D" uid="uid://ca41v2q0fsti8" path="res://Assets/LEGENDA TIGA RAJA.png" id="4_lp0jy"]
[ext_resource type="Texture2D" uid="uid://bg0nri6iewqjb" path="res://Assets/UI/Banners/Banner_Vertical.png" id="4_m8tx7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hsprd"]

[sub_resource type="Theme" id="Theme_78bce"]
Button/colors/font_color = Color(0.0519484, 0.0519484, 0.0519484, 1)
Button/font_sizes/font_size = 38
Button/styles/focus = SubResource("StyleBoxEmpty_hsprd")
Button/styles/hover = ExtResource("1_omhcb")
Button/styles/normal = ExtResource("2_yy8nm")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_78bce")
script = ExtResource("3_tgang")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -587.0
offset_top = -328.0
offset_right = 584.0
offset_bottom = 344.0
texture = ExtResource("4_lp0jy")
expand_mode = 1
stretch_mode = 4

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_m8tx7")
region_rect = Rect2(32, 29, 128, 136)
patch_margin_left = 24
patch_margin_top = 36
patch_margin_right = 26
patch_margin_bottom = 31
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -72.5
offset_right = 50.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="CreditsButton" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="button_up" from="NinePatchRect/VBoxContainer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/CreditsButton" to="." method="_on_credits_button_button_up"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
